Fixed dark mode on expo hero

--- a/src/styles/expo-hero.module.scss
+++ b/src/styles/expo-hero.module.scss
@@ -7,14 +7,14 @@
 
 .title {
   font-size: 102px;
-  color: var(--color_primary_contrast);
+  color: var(--color_text_dark);
   font-weight: bold;
   text-align: center;
 }
 
 .subtitle {
   font-size: 32px;
-  color: var(--color_primary_contrast);
+  color: var(--color_text_dark);
   text-align: center;
   max-width: 800px;
   margin: auto;
